# Change-Style-Of-Naming

./: .gitignore  CMakeLists.txt  Description.txt  Plan.md  README.md  main.cpp  test.cpp
TEST/: test.cpp  test.cpp_changed
include/: AddUnderLineToPrivateFields.h  CamelToSnake.h  Change.h  ChangeClasses.h  ChangeFile.h  ChangeFunctions.h  ChangeVariables.h  CreateNewFile.h  Save.h  SnakeToCamel.h  Text.h  UI.h  change.h  helpingFunctions.h  helpingfunctions.h  project.h  save.h  text.h
include/Interfaces/: CamelToSnake.h
src/: AddUnderLineToPrivateFields.cpp  CamelToSnake.cpp  Change.cpp  ChangeClasses.cpp  ChangeFile.cpp  ChangeFunctions.cpp  ChangeVariables.cpp  CreateNewFile.cpp  Save.cpp  SnakeToCamel.cpp  Text.cpp  UI.cpp  change.cpp  helpingFunctions.cpp  project.cpp  save.cpp  text.cpp
ui/: mainwindow.cpp  mainwindow.h
ui/include/: myAppWindow.h
